Add SLSA files. Cutover from goreleaser.
Signed-off-by: Timothy Tavarez <timothy.tavarez@decombine.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,11 @@
 name: goreleaser
 
 on:
-  push:
-    tags:
-      - "*"
+  # Using workflow_dispatch to allow for only as necessary releases during SLSA3+ cutover.
+  workflow_dispatch:
+#  push:
+#    tags:
+#      - "*"
 
 permissions:
   contents: write
